[gd_scene load_steps=5 format=3 uid="uid://ceeakpl4ea4mc"]

[ext_resource type="Script" uid="uid://dy5tx6jgabs5h" path="res://scripts/ui/choice_scene.gd" id="1_gdmnq"]
[ext_resource type="Theme" uid="uid://5ev7ecmv357e" path="res://resource/styles/dialogue_box.tres" id="3_dgppj"]
[ext_resource type="Texture2D" uid="uid://cqeljsqom3xgd" path="res://assets/nueva_interfaz/Bloque_Chat_Personaje_Largo_1.svg" id="4_4g6if"]
[ext_resource type="PackedScene" uid="uid://c2k5sqx0lswhk" path="res://scenes/ui/outcome_text.tscn" id="4_12l1q"]

[node name="ChoiceScene" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_gdmnq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="QuestionBox" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="QuestionTexture" type="TextureRect" parent="HBoxContainer/VBoxContainer/QuestionBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
texture = ExtResource("4_4g6if")
expand_mode = 1
stretch_mode = 5

[node name="QuestionMargin" type="MarginContainer" parent="HBoxContainer/VBoxContainer/QuestionBox"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_dgppj")
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/QuestionBox/QuestionMargin"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CharacterName" type="Label" parent="HBoxContainer/VBoxContainer/QuestionBox/QuestionMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "asdas"

[node name="QuestionLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/QuestionBox/QuestionMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "aaaaaaaaa"
fit_content = true

[node name="ChoiceBox" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ChoiceTexture" type="TextureRect" parent="HBoxContainer/VBoxContainer/ChoiceBox"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
texture = ExtResource("4_4g6if")
expand_mode = 1
stretch_mode = 5

[node name="ChoiceMargin" type="MarginContainer" parent="HBoxContainer/VBoxContainer/ChoiceBox"]
layout_mode = 2
theme = ExtResource("3_dgppj")
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ChoiceLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/ChoiceBox/ChoiceMargin"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "aaa"
fit_content = true

[node name="OutcomeText" parent="HBoxContainer" instance=ExtResource("4_12l1q")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" parent="HBoxContainer/OutcomeText" index="0"]
custom_minimum_size = Vector2(200, 200)
stretch_mode = 0

[editable path="HBoxContainer/OutcomeText"]
